[package]
name = "shelly-waybar"
version = "0.1.0"
edition = "2021"
authors = ["Cyrinux <crates@levis.name>"]
description = "A Rust application to parse Shelly sensor data and output Waybar-compatible JSON."
readme = "README.md"
keywords = ["shelly", "waybar", "json", "sensors", "rust"]
license = "MIT"
repository = "https://github.com/cyrinux/shelly-waybar"
homepage = "https://github.com/cyrinux/shelly-waybar"
documentation = "https://docs.rs/shelly-waybar"
categories = ["command-line-utilities", "data-formatting", "network-programming"]

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify-rust = "4.11.3"
