[package]
name = "shelly-waybar"
version = "1.0.0"
edition = "2021"
authors = ["Cyrinux <crates@levis.name>"]
description = "A Rust application to parse Shelly sensor data and output Waybar-compatible JSON."
readme = "README.md"
keywords = ["shelly", "waybar", "json", "sensors", "rust"]
license = "MIT"
repository = "https://github.com/cyrinux/shelly-waybar"
homepage = "https://github.com/cyrinux/shelly-waybar"
documentation = "https://docs.rs/shelly-waybar"
categories = ["command-line-utilities", "data-formatting", "network-programming"]

[dependencies]
clap = { version = "4.1", features = ["derive", "env"] }
futures-util = "0.3.31"
reqwest = { version = "0.11", features = ["json"] }
strum = "0.24"
strum_macros = "0.24"
tungstenite = "0.18"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify-rust = "4.5"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
serde_json = "1.0"
httpmock = "0.6.4"
tokio = { version = "1.0", features = ["full"] }
